first fixes for responsiveness (mobile)
ABOUT ( overview, equipment, board )

adjustments to use less px values, more %'s, changed grid height to fit with enough outer padding so items aren't off screen

TODO: fix contact button on mobile

--- a/ReactProject/cerasp/src/components/panels/css/AboutOverview.css
+++ b/ReactProject/cerasp/src/components/panels/css/AboutOverview.css
@@ -300,6 +300,7 @@
   .about-overview-grid {
     width: 90%;
     grid-template-rows: repeat(12, 1fr);
+    height: 85%;
   }
 
   .about-toggle-button {
