--- a/ReactProject/cerasp/src/components/panels/css/EquipmentsPanel.css
+++ b/ReactProject/cerasp/src/components/panels/css/EquipmentsPanel.css
@@ -126,15 +126,16 @@
 }
 
 @media (max-width: 1024px) {
+  .equipments-panel-grid {
+    margin-top: 0%;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+  }
+
   .equipments-right-content-text {
     text-align: center;
     font-size: 16px;
-    margin-bottom: 1em;
-  }
-
-  .equipments-panel-grid {
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(1, 1fr);
+    /* margin-bottom: 1em; */
   }
 
   .equipments-right-content {
@@ -153,6 +154,14 @@
 }
 
 @media (max-width: 576px) {
+  .equipments-panel-grid {
+    height: 90%;
+  }
+
+  .equipments-right-content-text {
+    display: none;
+  }
+
   .individual-equipment {
     align-self: center;
     min-width: 100%;
